// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PriceSummary correctly on cart page 1`] = `
<div
  className="root"
>
  <div
    className="lineItems"
  >
    <span
      className="lineItemLabel"
    >
      Subtotal
    </span>
    <span
      className="price"
    >
      <span>
        $3.5
      </span>
    </span>
    <span
      className="totalLabel"
    >
      Estimated Total
    </span>
    <span
      className="totalPrice"
    >
      <span>
        $8.5
      </span>
    </span>
  </div>
  <div
    className="checkoutButton_container"
  >
    <button
      className="root_highPriority"
      type="button"
    >
      <span
        className="content"
      >
        Proceed to Checkout
      </span>
    </button>
  </div>
</div>
`;

exports[`renders PriceSummary correctly on checkout page 1`] = `
<div
  className="root"
>
  <div
    className="lineItems"
  >
    <span
      className="lineItemLabel"
    >
      Subtotal
    </span>
    <span
      className="price"
    >
      <span>
        $3.5
      </span>
    </span>
    <span
      className="totalLabel"
    >
      Total
    </span>
    <span
      className="totalPrice"
    >
      <span>
        $8.5
      </span>
    </span>
  </div>
</div>
`;

exports[`renders an error state if query fails 1`] = `
<div
  className="root"
>
  An error occurred. Please refresh the page.
</div>
`;

exports[`renders nothing if query is loading 1`] = `null`;

exports[`renders nothing if query returns no items 1`] = `null`;
